changed to streaming import for files